--- a/MultiTask/PlaceholderBackgroundView.xib
+++ b/MultiTask/PlaceholderBackgroundView.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,28 +13,28 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PlaceholderBackgroundView" customModule="MultiTask" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="377" height="439"/>
+            <rect key="frame" x="0.0" y="0.0" width="330" height="448"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PvS-b5-FPq">
-                    <rect key="frame" x="0.0" y="0.0" width="377" height="439"/>
+                    <rect key="frame" x="0.0" y="0.0" width="330" height="448"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="D5i-bm-RA6">
-                            <rect key="frame" x="123" y="115.5" width="132" height="208.5"/>
+                            <rect key="frame" x="55" y="120.5" width="220" height="208.5"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Sn6-Pv-MDL">
-                                    <rect key="frame" x="22" y="0.0" width="88" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="220" height="120"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9jw-fA-5lx">
-                                            <rect key="frame" x="0.0" y="0.0" width="88" height="88"/>
+                                            <rect key="frame" x="110" y="0.0" width="88" height="88"/>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="88" id="Eqn-4p-tlU"/>
                                                 <constraint firstAttribute="width" constant="88" id="grt-6A-gdQ"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titileLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XdI-Pz-AC2">
-                                            <rect key="frame" x="2" y="96" width="84.5" height="24"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titileLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XdI-Pz-AC2">
+                                            <rect key="frame" x="0.0" y="96" width="220" height="24"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -41,16 +42,16 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jPS-6g-VGv">
-                                    <rect key="frame" x="0.0" y="136" width="132" height="72.5"/>
+                                    <rect key="frame" x="0.0" y="136" width="220" height="72.5"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitleLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhF-gw-mgN">
-                                            <rect key="frame" x="17" y="0.0" width="98.5" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitleLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhF-gw-mgN">
+                                            <rect key="frame" x="0.0" y="0.0" width="220" height="20.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U5V-7N-o2W">
-                                            <rect key="frame" x="0.0" y="28.5" width="132" height="44"/>
+                                            <rect key="frame" x="110" y="28.5" width="132" height="44"/>
                                             <color key="backgroundColor" red="0.93725490570000003" green="0.34901961679999999" blue="0.1921568662" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="44" id="8pQ-Wo-1wS"/>
@@ -66,10 +67,15 @@
                                     </subviews>
                                 </stackView>
                             </subviews>
+                            <constraints>
+                                <constraint firstItem="JhF-gw-mgN" firstAttribute="width" secondItem="D5i-bm-RA6" secondAttribute="width" id="jO4-Fs-pTg"/>
+                                <constraint firstItem="XdI-Pz-AC2" firstAttribute="width" secondItem="D5i-bm-RA6" secondAttribute="width" id="tuk-h2-K3m"/>
+                            </constraints>
                         </stackView>
                     </subviews>
                     <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstItem="D5i-bm-RA6" firstAttribute="width" secondItem="PvS-b5-FPq" secondAttribute="width" multiplier="2:3" id="7Sx-ni-c4s"/>
                         <constraint firstItem="D5i-bm-RA6" firstAttribute="centerY" secondItem="PvS-b5-FPq" secondAttribute="centerY" id="CiF-o4-S5a"/>
                         <constraint firstItem="D5i-bm-RA6" firstAttribute="centerX" secondItem="PvS-b5-FPq" secondAttribute="centerX" id="OGE-EJ-mzV"/>
                     </constraints>
@@ -92,7 +98,7 @@
                 <outlet property="tipsImageView" destination="9jw-fA-5lx" id="oiZ-yO-JmA"/>
                 <outlet property="titleLabel" destination="XdI-Pz-AC2" id="PVO-oj-uKz"/>
             </connections>
-            <point key="canvasLocation" x="26.5" y="-61.5"/>
+            <point key="canvasLocation" x="3" y="-57"/>
         </view>
     </objects>
 </document>
