--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -403,6 +403,6 @@
         <image name="Tasks" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qXS-1W-mkt"/>
+        <segue reference="P0C-2o-NYU"/>
     </inferredMetricsTieBreakers>
 </document>
