--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tasks-->
+        <!--Main Tasks View Controller-->
         <scene sceneID="hgm-Wn-b8p">
             <objects>
                 <viewController storyboardIdentifier="MainTasksViewController" id="dsH-gt-lIU" customClass="MainTasksViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="X2r-0b-ufa">
-                                <rect key="frame" x="0.0" y="47" width="375" height="507"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hQL-ey-9lz">
                                     <size key="itemSize" width="50" height="50"/>
@@ -28,31 +28,22 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ocb-OI-z1R" customClass="MenuBarView" customModule="MultiTask" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="47"/>
-                                <color key="backgroundColor" red="0.93725490570000003" green="0.34901961679999999" blue="0.1921568662" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="47" id="clb-V1-EdS"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Ocb-OI-z1R" firstAttribute="leading" secondItem="Un2-CH-2LP" secondAttribute="leading" id="G49-8g-bjb"/>
-                            <constraint firstItem="X2r-0b-ufa" firstAttribute="top" secondItem="Ocb-OI-z1R" secondAttribute="bottom" id="LW1-5f-dTg"/>
+                            <constraint firstItem="X2r-0b-ufa" firstAttribute="top" secondItem="Un2-CH-2LP" secondAttribute="top" id="3KB-av-GkJ"/>
                             <constraint firstItem="Un2-CH-2LP" firstAttribute="trailing" secondItem="X2r-0b-ufa" secondAttribute="trailing" id="Pw8-yK-NMS"/>
                             <constraint firstItem="X2r-0b-ufa" firstAttribute="leading" secondItem="Un2-CH-2LP" secondAttribute="leading" id="YzQ-z2-3Ia"/>
                             <constraint firstItem="Un2-CH-2LP" firstAttribute="bottom" secondItem="X2r-0b-ufa" secondAttribute="bottom" id="bnU-zT-fRx"/>
-                            <constraint firstItem="Un2-CH-2LP" firstAttribute="trailing" secondItem="Ocb-OI-z1R" secondAttribute="trailing" id="qaI-gi-uRy"/>
-                            <constraint firstItem="Ocb-OI-z1R" firstAttribute="top" secondItem="VbP-0c-mNB" secondAttribute="top" id="wik-Bc-Lgw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Un2-CH-2LP"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Tasks" largeTitleDisplayMode="never" id="gC8-og-jR3"/>
+                    <navigationItem key="navigationItem" id="gC8-og-jR3">
+                        <nil key="title"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="mainCollectionView" destination="X2r-0b-ufa" id="pgI-Zj-42R"/>
                         <outlet property="mainCollectionViewFlowLayout" destination="hQL-ey-9lz" id="S6n-Ki-IxI"/>
-                        <outlet property="menuBarView" destination="Ocb-OI-z1R" id="8QT-eC-lc3"/>
                         <segue destination="Qb7-A2-IyR" kind="show" identifier="AddButtonToTaskEditorViewController" id="qXS-1W-mkt"/>
                         <segue destination="4U5-QD-6XH" kind="show" identifier="PendingTaskCellToItemsViewController" id="5p0-yC-2ry"/>
                         <segue destination="pW2-zX-ZIV" kind="show" identifier="AvatarButtonToSettingsViewController" id="qw2-st-klr"/>
